# geldia-api

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  pytest.yml
core/: models.py  pagination.py  urls.py
core/permissions/: base.py
core/settings/: __init__.py  base.py  dev.py  prod.py  test.py
core/viewsets/: mixins.py
ledger/: admin.py  apps.py  constants.py  filters.py  models.py  urls.py  utils.py
ledger/migrations/: 0001_initial.py  0002_initial.py  0003_alter_category_options_alter_place_options_and_more.py  0004_alter_tag_options.py  0005_alter_category_transaction_type.py  0006_alter_tag_unique_together_place_classification_and_more.py  0007_remove_transactionlog_ledger_tran_transac_182dde_idx_and_more.py  0008_alter_place_unique_together_and_more.py  0009_accountlog.py  0010_rename_ledger_acco_account_8dcb52_idx_ledger_acco_account_30b40d_idx_and_more.py  0011_budget.py  0012_alter_budget_managers_alter_budget_created_by_and_more.py
ledger/querysets/: transactions.py
ledger/serializers/: accounts.py  budgets.py  categories.py  dashboard.py  logs.py  places.py  reports.py  stores.py  tags.py  transaction_logs.py  transaction_types.py  transactions.py
ledger/utils/: budgets.py  common.py  transactions.py
ledger/views/: accounts.py  budgets.py  categories.py  dashboard.py  (+7 more)
nginx/: default.conf
templates/: email_manual_verification.html  email_verification_result.html  landing.html  password_change_manual_verification.html  password_change_verification_result.html
tests/: conftest.py
users/: admin.py  managers.py  models.py  serializers.py  urls.py  utils.py  views.py
(+33 files in other folders)
